fix: RawPassword
